Add missing directories

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
+ 
+  <!-- <base href="https://ayhamhashesh27.github.io/Portfolio/"> -->
   <base href="/">
 
   <meta charset="UTF-8">
@@ -31,7 +33,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2259369854';
+    var serviceWorkerVersion = '3183391128';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
