--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
  
-  <!-- <base href="https://ayhamhashesh27.github.io/Portfolio/"> -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Ayham Hashesh Portfolio">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
