--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
  
+  <!-- <base href="https://ayhamhashesh27.github.io/Portfolio/"> -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Ayham Hashesh Portfolio">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -32,7 +33,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3183391128';
+    var serviceWorkerVersion = '1883248932';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
